--- a/sVanilla/src/ClientUi/VideoList/VideoWidget.ui
+++ b/sVanilla/src/ClientUi/VideoList/VideoWidget.ui
@@ -6,74 +6,77 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>304</width>
-    <height>240</height>
+    <width>660</width>
+    <height>548</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <layout class="QHBoxLayout" name="SwitchBtnLayout">
-     <item>
-      <spacer name="horizontalSpacer">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <widget class="QPushButton" name="VideoGridBtn">
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="VideoListBtn">
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-    </layout>
+    <widget class="QWidget" name="SwitchBtnWidget" native="true">
+     <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <item>
+       <spacer name="horizontalSpacer">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="QPushButton" name="VideoGridBtn">
+        <property name="text">
+         <string/>
+        </property>
+        <property name="checkable">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="VideoListBtn">
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="VideoLayout">
-     <item>
-      <widget class="QStackedWidget" name="VideoStackedPage">
-       <widget class="QWidget" name="VideoTab">
-        <layout class="QVBoxLayout" name="VideoTabLayout">
-         <item>
-          <widget class="::VideoGridWidget" name="VideoGridWidget">
-           <property name="selectionMode">
-            <enum>QAbstractItemView::NoSelection</enum>
-           </property>
-          </widget>
-         </item>
-        </layout>
+    <widget class="QWidget" name="VideoLayoutWidget" native="true">
+     <layout class="QHBoxLayout" name="horizontalLayout_3">
+      <item>
+       <widget class="QStackedWidget" name="VideoStackedPage">
+        <widget class="QWidget" name="VideoGrid">
+         <layout class="QVBoxLayout" name="VideoTabLayout">
+          <item>
+           <widget class="::VideoGridWidget" name="VideoGridWidget">
+            <property name="selectionMode">
+             <enum>QAbstractItemView::NoSelection</enum>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+        <widget class="QWidget" name="VideoList">
+         <layout class="QVBoxLayout" name="VideoListLayout">
+          <item>
+           <widget class="::VideoListWidget" name="VideoListWidget"/>
+          </item>
+         </layout>
+        </widget>
        </widget>
-       <widget class="QWidget" name="VideoList">
-        <layout class="QVBoxLayout" name="VideoListLayout">
-         <item>
-          <widget class="::VideoListWidget" name="VideoListWidget">
-           <property name="selectionMode">
-            <enum>QAbstractItemView::NoSelection</enum>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </widget>
-      </widget>
-     </item>
-     <item>
-      <widget class="::VideoDetailWidget" name="VideoDetailWidget" native="true"/>
-     </item>
-    </layout>
+      </item>
+      <item>
+       <widget class="::VideoDetailWidget" name="VideoDetailWidget" native="true"/>
+      </item>
+     </layout>
+    </widget>
    </item>
   </layout>
  </widget>
