--- a/sVanilla/src/ClientUi/VideoList/VideoListWidget.ui
+++ b/sVanilla/src/ClientUi/VideoList/VideoListWidget.ui
@@ -18,13 +18,13 @@
     <number>0</number>
    </property>
    <property name="leftMargin">
-    <number>0</number>
+    <number>10</number>
    </property>
    <property name="topMargin">
     <number>0</number>
    </property>
    <property name="rightMargin">
-    <number>0</number>
+    <number>10</number>
    </property>
    <property name="bottomMargin">
     <number>0</number>
@@ -51,6 +51,9 @@
      <property name="text">
       <string>Author</string>
      </property>
+     <property name="margin">
+      <number>5</number>
+     </property>
     </widget>
    </item>
    <item>
@@ -59,7 +62,7 @@
       <string>30:50</string>
      </property>
      <property name="margin">
-      <number>0</number>
+      <number>5</number>
      </property>
     </widget>
    </item>
@@ -67,6 +70,9 @@
     <widget class="QLabel" name="PulishDate">
      <property name="text">
       <string>2024.2.2</string>
+     </property>
+     <property name="margin">
+      <number>5</number>
      </property>
     </widget>
    </item>
@@ -84,7 +90,13 @@
     </spacer>
    </item>
    <item>
-    <widget class="QPushButton" name="VideoListInformationBtn">
+    <widget class="QPushButton" name="VideoListDetailsBtn">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="text">
       <string/>
      </property>
@@ -92,6 +104,12 @@
    </item>
    <item>
     <widget class="QPushButton" name="VideoListDownloadBtn">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="text">
       <string/>
      </property>
