--- a/sVanilla/src/ClientUi/VideoList/VideoWidget.ui
+++ b/sVanilla/src/ClientUi/VideoList/VideoWidget.ui
@@ -28,21 +28,7 @@
        </spacer>
       </item>
       <item>
-       <widget class="QPushButton" name="VideoGridBtn">
-        <property name="text">
-         <string/>
-        </property>
-        <property name="checkable">
-         <bool>false</bool>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="VideoListBtn">
-        <property name="text">
-         <string/>
-        </property>
-       </widget>
+       <widget class="::ToggleSwitch" name="SwitchBtn" native="true"/>
       </item>
      </layout>
     </widget>
@@ -73,7 +59,14 @@
        </widget>
       </item>
       <item>
-       <widget class="::VideoDetailWidget" name="VideoDetailWidget" native="true"/>
+       <widget class="::VideoDetailWidget" name="VideoDetailWidget" native="true">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
@@ -96,6 +89,12 @@
    <class>::VideoDetailWidget</class>
    <extends>QWidget</extends>
    <header>ClientUi/VideoList/VideoDetailWidget.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>::ToggleSwitch</class>
+   <extends>QWidget</extends>
+   <header>SUI/ToggleSwitch.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
