feat(ui): update data to VideoListWidget

--- a/sVanilla/src/ClientUi/VideoList/VideoGridWidget.ui
+++ b/sVanilla/src/ClientUi/VideoList/VideoGridWidget.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>350</width>
+    <width>305</width>
     <height>289</height>
    </rect>
   </property>
@@ -39,7 +39,7 @@
    <item>
     <widget class="QLabel" name="VideoGridTitle">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
