--- a/sVanilla/src/ClientUi/VideoList/VideoListWidget.ui
+++ b/sVanilla/src/ClientUi/VideoList/VideoListWidget.ui
@@ -30,13 +30,6 @@
     <number>0</number>
    </property>
    <item>
-    <widget class="QCheckBox" name="checkBox">
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
-   </item>
-   <item>
     <widget class="QLabel" name="Title">
      <property name="text">
       <string>Apple Vision Pro 开箱评测：当梦想照进现实</string>
@@ -47,7 +40,7 @@
     </widget>
    </item>
    <item>
-    <widget class="QLabel" name="label">
+    <widget class="QLabel" name="Author">
      <property name="text">
       <string>Author</string>
      </property>
