feat(ui): update VideoWidget; del search icon

--- a/sVanilla/resource/sVanilla.qrc
+++ b/sVanilla/resource/sVanilla.qrc
@@ -12,6 +12,7 @@
         <file>icon/home/clear.svg</file>
         <file>icon/home/clipboard.svg</file>
         <file>icon/home/history.svg</file>
+        <file>icon/home/enter.svg</file>
         <file>icon/video/grid.svg</file>
         <file>icon/video/list.svg</file>
         <file>icon/video/detail.svg</file>
