--- a/sVanilla/src/SUI/SearchLineEdit.ui
+++ b/sVanilla/src/SUI/SearchLineEdit.ui
@@ -10,28 +10,18 @@
     <height>48</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
   <property name="windowTitle">
    <string>SearchLineEdit</string>
   </property>
   <property name="clearButtonEnabled">
    <bool>false</bool>
   </property>
-  <widget class="QPushButton" name="SearchBtn">
-   <property name="geometry">
-    <rect>
-     <x>410</x>
-     <y>8</y>
-     <width>32</width>
-     <height>32</height>
-    </rect>
-   </property>
-   <property name="cursor">
-    <cursorShape>ArrowCursor</cursorShape>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-  </widget>
   <widget class="QPushButton" name="ClearBtn">
    <property name="geometry">
     <rect>
