--- a/sVanilla/src/ClientUi/MainWindow/MainWindow.ui
+++ b/sVanilla/src/ClientUi/MainWindow/MainWindow.ui
@@ -36,20 +36,8 @@
        <number>0</number>
       </property>
       <widget class="::HomePage" name="homePage"/>
-      <widget class="QWidget" name="galleryPage">
-       <layout class="QHBoxLayout" name="galleryLayout">
-        <item>
-         <widget class="::VideoTabWidget" name="videoTab"/>
-        </item>
-       </layout>
-      </widget>
-      <widget class="QWidget" name="downloadPage">
-       <layout class="QHBoxLayout" name="downloadLayout">
-        <item>
-         <widget class="::DownloadingListWidget" name="downloadTab"/>
-        </item>
-       </layout>
-      </widget>
+      <widget class="::VideoWidget" name="VideoPage"/>
+      <widget class="::DownloadWidget" name="downloadPage"/>
       <widget class="::SettingPage" name="settingPage"/>
      </widget>
     </item>
@@ -65,21 +53,21 @@
    <container>1</container>
   </customwidget>
   <customwidget>
-   <class>::VideoTabWidget</class>
-   <extends>QListWidget</extends>
-   <header>ClientUi/VideoList//VideoTabWidget.h</header>
-   <container>1</container>
-  </customwidget>
-  <customwidget>
-   <class>::DownloadingListWidget</class>
-   <extends>QListWidget</extends>
-   <header>ClientUi/Download/DownloadingListWidget.h</header>
-   <container>1</container>
-  </customwidget>
-  <customwidget>
    <class>::SettingPage</class>
    <extends>QWidget</extends>
    <header>ClientUi/Setting/SettingPage.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>::VideoWidget</class>
+   <extends>QStackedWidget</extends>
+   <header>ClientUi/VideoList/VideoWidget.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>::DownloadWidget</class>
+   <extends>QWidget</extends>
+   <header>ClientUi/Download/DownloadWidget.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
