debug add downloader

--- a/sVanilla/src/ClientUi/Download/DownloadingListWidget.ui
+++ b/sVanilla/src/ClientUi/Download/DownloadingListWidget.ui
@@ -124,7 +124,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QLabel" name="Speed">
+       <widget class="QLabel" name="labelSpeed">
         <property name="text">
          <string/>
         </property>
