refactor(ui): put the videoPage item signal into the listwidget

--- a/sVanilla/src/ClientUi/VideoList/VideoGridWidget.ui
+++ b/sVanilla/src/ClientUi/VideoList/VideoGridWidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>305</width>
-    <height>289</height>
+    <height>253</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -29,12 +29,25 @@
    <item>
     <widget class="::RoundImageWidget" name="Cover" native="true">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
     </widget>
+   </item>
+   <item>
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
    </item>
    <item>
     <widget class="QLabel" name="VideoGridTitle">
