--- a/sVanilla/src/ClientUi/VideoList/VideoWidget.ui
+++ b/sVanilla/src/ClientUi/VideoList/VideoWidget.ui
@@ -11,9 +11,33 @@
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
+   <property name="leftMargin">
+    <number>12</number>
+   </property>
+   <property name="topMargin">
+    <number>12</number>
+   </property>
+   <property name="rightMargin">
+    <number>12</number>
+   </property>
+   <property name="bottomMargin">
+    <number>12</number>
+   </property>
    <item>
     <widget class="QWidget" name="SwitchBtnWidget" native="true">
      <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <property name="leftMargin">
+       <number>0</number>
+      </property>
+      <property name="topMargin">
+       <number>0</number>
+      </property>
+      <property name="rightMargin">
+       <number>5</number>
+      </property>
+      <property name="bottomMargin">
+       <number>0</number>
+      </property>
       <item>
        <spacer name="horizontalSpacer">
         <property name="orientation">
@@ -39,7 +63,11 @@
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
-      <widget class="::VideoGridWidget" name="VideoGridWidget"/>
+      <widget class="::VideoGridWidget" name="VideoGridWidget">
+       <property name="verticalScrollBarPolicy">
+        <enum>Qt::ScrollBarAlwaysOff</enum>
+       </property>
+      </widget>
       <widget class="::VideoDetailWidget" name="VideoGridDetailWidget" native="true"/>
      </widget>
      <widget class="QWidget" name="VideoListPage">
@@ -49,7 +77,14 @@
          <property name="orientation">
           <enum>Qt::Vertical</enum>
          </property>
-         <widget class="::VideoListWidget" name="VideoListWidget"/>
+         <widget class="::VideoListWidget" name="VideoListWidget">
+          <property name="verticalScrollBarPolicy">
+           <enum>Qt::ScrollBarAlwaysOff</enum>
+          </property>
+          <property name="resizeMode">
+           <enum>QListView::Fixed</enum>
+          </property>
+         </widget>
          <widget class="::VideoDetailWidget" name="VideoListDetailWidget" native="true"/>
         </widget>
        </item>
